--- a/.gitignore
+++ b/.gitignore
@@ -36,9 +36,12 @@ build/
 .DS_Store
 
 # Node / Frontend
+node/
+bin/
 node_modules/
 dist/
 .next/       # if you ever try Next.js
+.vite/      # if you ever try Vite
 pnpm-lock.yaml
 yarn.lock
 package-lock.json
