--- a/bytetech-invoice-web/tsconfig.node.json
+++ b/bytetech-invoice-web/tsconfig.node.json
@@ -13,6 +13,12 @@
     "moduleDetection": "force",
     "noEmit": true,
 
+    /* Project refs */
+    "composite": true,
+
+    /* Types for vite.config + Node globals */
+    "types": ["node", "vite/client"],
+
     /* Linting */
     "strict": true,
     "noUnusedLocals": true,
@@ -21,5 +27,5 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": ["vite.config.ts"]
+  "include": ["vite.config.ts", "env.d.ts"]
 }
