--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -1,8 +1,9 @@
+# .github/workflows/build-and-push.yml
 name: Build & Push Image (GHCR)
 
 on:
   push:
-    branches: [ main ]   # adjust if needed
+    branches: [ main ]
   workflow_dispatch: {}
 
 env:
@@ -12,30 +13,33 @@ jobs:
   build:
     runs-on: ubuntu-latest
     permissions:
-      contents: read         # checkout
-      packages: write        # push to GHCR
+      contents: read
+      packages: write
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+      - uses: docker/setup-buildx-action@v3
 
-      - name: Log in to GHCR
+      - name: Login to GHCR
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build & Push (latest + sha)
-        uses: docker/build-push-action@v6
+      # 👇 Retry build+push up to 3 times on failures like 502
+      - name: Build & Push (retry)
+        uses: nick-invision/retry@v3
         with:
-          context: .
-          file: ./Dockerfile
-          push: true
-          tags: |
-            ${{ env.IMAGE_NAME }}:latest
-            ${{ env.IMAGE_NAME }}:${{ github.sha }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+          max_attempts: 3
+          timeout_minutes: 20
+          retry_on: error
+          command: |
+            docker buildx build \
+              --push \
+              --file ./Dockerfile \
+              --tag "${{ env.IMAGE_NAME }}:latest" \
+              --tag "${{ env.IMAGE_NAME }}:${{ github.sha }}" \
+              --cache-from=type=gha \
+              --cache-to=type=gha,mode=max \
+              .
